apps/flask-test-02/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-test-02
  labels:
    name: flask-test-02
    managed-by: dev-portal
